# rdkit

./: CMakeLists.txt  Makefile  RULE5_STATUS.md  build_and_test.sh  cip_ideas.cpp  new_cip.md  new_cip_appendix.md  new_cip_protocol.md  premake  premake.py  run_newcip_tests.sh
.claude/: settings.local.json
Code/GraphMol/: CMakeLists.txt
Code/GraphMol/CIPLabeler/: CIPLabeler.cpp  CIPMol.cpp  CIPMol.h  Digraph.cpp  Digraph.h
Code/GraphMol/CIPLabeler/configs/: Tetrahedral.cpp
Code/GraphMol/FileParsers/: CMakeLists.txt  MolFileParser.cpp
Code/GraphMol/NewCIPLabeler/: CMakeLists.txt  Descriptor.cpp  Descriptor.h  DoubleBond.cpp  DoubleBond.h  NewCIPLabeler.cpp  NewCIPLabeler.h  PERFORMANCE_ANALYSIS.md  PHASE2_STATUS.md  README.md  README_BENCHMARKS.md  Ranker.cpp  Ranker.h  Rules.cpp  Rules.h  SESSION_SUMMARY.md  Substituent.cpp  Substituent.h  Tetrahedral.cpp  Tetrahedral.h  catch_tests.cpp  detailed_plan.md  quick_benchmark.cpp  test_pdb.cpp
Code/GraphMol/NewCIPLabeler2/: CMakeLists.txt  NewCIPLabeler.cpp  NewCIPLabeler.h  catch_tests.cpp
Code/GraphMol/SmilesParse/: CXSmilesOps.cpp  catch_tests.cpp
Code/GraphMol/Wrap/: props.hpp
